--- a/index.html
+++ b/index.html
@@ -1,93 +1,85 @@
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon - Digital Marketing Solutions</title>
 </head>
 
 <body>
+    <!-- Header Section -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav aria-label="Main Navigation">
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
+                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Hero Section -->
     <figure class="hero" aria-hidden="true"></figure>
+
+    <!-- Main Content Section -->
     <main class="content">
+        <!-- SEO Section -->
         <section id="search-engine-optimization" class="search-engine-optimization">
-            <img alt="Laptop and notebook with SEO strategies" src="./assets/images/search-engine-optimization.jpg"
-                class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Laptop and notebook with SEO strategies" class="float-left" />
             <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel,
+            <p>The dominance of mobile internet use means that users are searching for the right business as they travel,
                 shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your
-                visibility and find the right customers for your business.
-            </p>
+                visibility and find the right customers for your business.</p>
         </section>
+
+        <!-- Online Reputation Management Section -->
         <section id="online-reputation-management" class="online-reputation-management">
-            <img alt="Laptop with reputation management graph" src="./assets/images/online-reputation-management.jpg"
-                class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="Laptop with reputation management graph" class="float-right" />
             <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+            <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an
                 internet connection to say whatever they want about your business. Online Reputation Management gives you
-                the control over what potential customers see when they search for your business.
-            </p>
+                the control over what potential customers see when they search for your business.</p>
         </section>
+
+        <!-- Social Media Marketing Section -->
         <section id="social-media-marketing" class="social-media-marketing">
-            <img alt="Social media icon company" src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="Social media icon company" class="float-left" />
             <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+            <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you
                 determine which platforms are suited to your brand, using analytics to find the right markets and
-                increase your lead generation.
-            </p>
+                increase your lead generation.</p>
         </section>
     </main>
+
+    <!-- Benefits Section -->
     <aside class="benefits" aria-label="Benefits Section">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img alt="Lead generation icon" src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly
-                to your website.
-            </p>
+            <img src="./assets/images/lead-generation.png" alt="Lead generation icon" />
+            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.</p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img alt="Brand awareness icon" src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility
-                for your business.
-            </p>
+            <img src="./assets/images/brand-awareness.png" alt="Brand awareness icon" />
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.</p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img alt="Cost management icon" src="./assets/images/cost-management.png"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer
-                need to advertise your page.
-            </p>
+            <img src="./assets/images/cost-management.png" alt="Cost management icon">
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.</p>
         </div>
     </aside>
+
+    <!-- Footer Section -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
+        <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
 </body>
 
